# FastAPI

./: pyproject.toml  test.http
src/models/: books.py  sellers.py
src/routers/: __init__.py
src/routers/v1/: books.py  sellers.py
src/schemas/: __init__.py  books.py  sellers.py
src/tests/: test_books_with_pytest.py  test_sellers_with_pytest.py
