[tool.poetry]
name = "fastapi"
version = "0.1.0"
description = ""
authors = ["30Irina <ichakak@bk.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
icecream = "^2.1.3"
uvicorn = "^0.27.1"
pydantic = "^2.6.3"
orjson = "^3.9.15"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
